<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_trending_up_black_48dp"
            android:title="@string/navigation_drawer_trending" />
        <item
            android:id="@+id/nav_followed"
            android:icon="@drawable/ic_favorite_solid_red_heart_48dp"
            android:title="@string/navigation_drawer_followed" />

        <item
            android:id="@+id/nav_business_followed"
            android:icon="@drawable/ic_work_black_48dp"
            android:title="@string/navigation_drawer_business"
            android:visible="false" />
        <item
            android:id="@+id/nav_entertainment_followed"
            android:icon="@drawable/ic_local_movies_black_48dp"
            android:title="@string/navigation_drawer_entertainment"
            android:visible="false" />
        <item
            android:id="@+id/nav_health_followed"
            android:icon="@drawable/ic_local_hospital_black_48dp"
            android:title="@string/navigation_drawer_health"
            android:visible="false" />
        <item
            android:id="@+id/nav_politics_followed"
            android:icon="@drawable/ic_account_balance_black_48dp"
            android:title="@string/navigation_drawer_politics"
            android:visible="false" />
        <item
            android:id="@+id/nav_scienceandtech_followed"
            android:icon="@drawable/ic_devices_other_black_48dp"
            android:title="@string/navigation_drawer_scienceandtech"
            android:visible="false" />
        <item
            android:id="@+id/nav_sports_followed"
            android:icon="@drawable/ic_golf_course_black_48dp"
            android:title="@string/navigation_drawer_sports"
            android:visible="false" />
        <item
            android:id="@+id/nav_world_followed"
            android:icon="@drawable/ic_black_globe_48dp"
            android:title="@string/navigation_drawer_world"
            android:visible="false" />
    </group>

    <item
        android:id="@+id/nav_more_topics"
        android:icon="@drawable/ic_list_black_48dp"
        android:title="@string/navigation_drawer_more_topics">

        <menu>

            <item
                android:id="@+id/nav_business"
                android:icon="@drawable/ic_work_black_48dp"
                android:title="@string/navigation_drawer_business" />
            <item
                android:id="@+id/nav_entertainment"
                android:icon="@drawable/ic_local_movies_black_48dp"
                android:title="@string/navigation_drawer_entertainment" />
            <item
                android:id="@+id/nav_health"
                android:icon="@drawable/ic_local_hospital_black_48dp"
                android:title="@string/navigation_drawer_health" />
            <item
                android:id="@+id/nav_politics"
                android:icon="@drawable/ic_account_balance_black_48dp"
                android:title="@string/navigation_drawer_politics" />
            <item
                android:id="@+id/nav_scienceandtech"
                android:icon="@drawable/ic_devices_other_black_48dp"
                android:title="@string/navigation_drawer_scienceandtech" />
            <item
                android:id="@+id/nav_sports"
                android:icon="@drawable/ic_golf_course_black_48dp"
                android:title="@string/navigation_drawer_sports" />
            <item
                android:id="@+id/nav_world"
                android:icon="@drawable/ic_black_globe_48dp"
                android:title="@string/navigation_drawer_world" />
        </menu>

    </item>

</menu>
